--- a/templates/shop/product_list.html
+++ b/templates/shop/product_list.html
@@ -61,9 +61,11 @@
 
                             <div class="block2-btn-addcart w-size1 trans-0-4">
                                 <!-- Button -->
-                                <button class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
-                                    Add to Cart
-                                </button>
+                                <form action="{% url "cart:cart_add" product.id  %}" method="post">
+                                    {{ cart_product_form }}
+                                    {% csrf_token %}
+                                    <input class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4" type="submit" value="Add to cart">
+                                </form>
                             </div>
                         </div>
                         </div>
